# jtremesay.org

./: .dockerignore  .gitignore  .gitmodules  COPYING  Dockerfile  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  jssg.toml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yaml
analytics/: admin.py  middleware.py  models.py
analytics/migrations/: 0001_initial.py
content/pages/: cgi.md  doom.md  freeflow.md  index.md  particles.md  pi_montecarlo.md  scadaplayer.md
content/posts/: 20240105_jssg_django.md
content/templates/: base.html
front/doom/: WAD.ts  engine.ts  loaders.ts  lumps.ts  main.ts  readers.ts  types.ts  view2d.ts  view3d.ts  wad_reader.ts
front/freeflow/: main.ts  style.css
front/jengine/: engine.ts  maths.ts  renderer_canvas.ts  renderer_svg.ts  vector.ts  vector_space.ts  webgl.ts
front/main/: cgi.ts  crankshaft.ts  doom.ts  freeflow.ts  particles.ts  pimontecarlo.ts  raycaster.ts  scadaplayer.ts  sorts.ts  textnodes.ts
front/particles/: engine.ts
front/raycaster/: drawer.ts  drawer_multiplexer.ts  drawer_svg.ts  maths.ts
front/scadaplayer/: engine.ts  main.ts  maths.ts  models.ts  simulation.ts
jssg/: settings.py  views.py
jtremesay/: admin.py  apps.py  models.py  storage.py  tests.py  urls.py  views.py
jtremesay/pages/: cgi.md  crankshaft.md  doom.md  index.md  pi_montecarlo.md  raycaster.md  (+2 more)
proj/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.html
(+124 files in other folders)
